<resources>
    <string name="app_name">Quiz application</string>

    <string name="general_knowledge_quiz">General Knowledge Quiz</string>
    <string name="name">Name :</string>
    <string name="roll_no">Roll no. :</string>
    <string name="Q1">Q1: The United Nations was founded on ?</string>
    <string name="Q1_option1">March 24, 1945</string>
    <string name="Q1_option2">October 24, 1945</string>
    <string name="Q1_option3">March 24, 1949</string>
    <string name="Q1_option4">October 24, 1950</string>
    <string name="Q2">Q2; The international court of justice is located in?</string>
    <string name="Q2_option1">New York</string>
    <string name="Q2_option2">Washington</string>
    <string name="Q2_option3">Geneva</string>
    <string name="Q2_option4">The Hague</string>
    <string name="Q3">Q3: Which country were involved in 100 year war ?</string>
    <string name="Q3_option1">Turkey</string>
    <string name="Q3_option2">Austria</string>
    <string name="Q3_option3">England</string>
    <string name="Q3_option4">France</string>
    <string name="Q4">Q4: Which vitamin is not found in human body ?</string>
    <string name="Q4_enter_your_answer">Enter your answer</string>
    <string name="Q5">Q5: ANTARA is the news agency of ?</string>
    <string name="Q5_option1">Syria</string>
    <string name="Q5_option2">Yemen</string>
    <string name="Q5_option3">Jordan</string>
    <string name="Q5_option4">Indonesia</string>
    <string name="Q6">Q6: Pakistan\'s number among world population ?</string>
    <string name="Q6_enter_your_answer_">Enter your answer</string>
    <string name="Q7">Q7: Blood is red due to ?</string>
    <string name="Q7_enter_your_answer">Enter your answer</string>
    <string name="Q8">Q8: The Khyber Pass links which two countries ?</string>
    <string name="Q8_option1">India</string>
    <string name="Q8_option2">China</string>
    <string name="Q8_option3">Afghanistan</string>
    <string name="Q8_option4">Pakistan</string>
    <string name="Q9">Q9: The headquarter of NATO is located in ?</string>
    <string name="Q9_option1">New York</string>
    <string name="Q9_option2">Paris</string>
    <string name="Q9_option3">Geneva</string>
    <string name="Q9_option4">Brussels</string>
    <string name="Q10">Q10: Which Company is owned by Bill Gates ?</string>
    <string name="Q10_option1">IBM</string>
    <string name="Q10_option2">Sun</string>
    <string name="Q10_option3">Microsoft</string>
    <string name="Q10_option4">Apple</string>
    <string name="quiz_score_button">Quiz Score</string>
</resources>
