<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.quizapplication.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/stylemeasure"
            android:text="@string/general_knowledge_quiz"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:id="@+id/gk_quiz"/>

        <TextView
            style="@style/styleinfo"
            android:textSize="18sp"
            android:text="@string/name"
            android:layout_below="@id/gk_quiz"
            android:id="@+id/Name"/>

        <EditText
            style="@style/stylemeasure"
            android:layout_toRightOf="@id/Name"
            android:layout_below="@id/gk_quiz"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/name_"
            />

        <TextView
            style="@style/styleinfo"
            android:textSize="18sp"
            android:text="@string/roll_no"
            android:layout_below="@id/Name"
            android:id="@+id/Roll_no"
            />
        <EditText
            style="@style/stylemeasure"
            android:layout_toRightOf="@id/Roll_no"
            android:layout_below="@id/Name"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/Roll_no_"/>

    </RelativeLayout>

    <TextView
        style="@style/styleinfo"
        android:text="@string/Q1"
        android:id="@+id/Question_1"
        />

    <RadioGroup
        style="@style/stylemeasure">

        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q1_option1"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q1_option2"
            android:id="@+id/answer_1"
            />
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q1_option3"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q1_option4"/>
    </RadioGroup>

    <TextView
        style="@style/stylemeasure"
        android:text="@string/Q2"
        android:id="@+id/Question_2"/>

    <RadioGroup
        style="@style/stylemeasure">
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q2_option1"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q2_option2"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q2_option3"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q2_option4"
            android:id="@+id/answer_2"/>
    </RadioGroup>

    <TextView
       style="@style/stylemeasure"
        android:text="@string/Q3"
        android:id="@+id/Question_3"/>

    <CheckBox
        style="@style/stylemeasure"
        android:text="@string/Q3_option1"
        android:id="@+id/wrong_answer3i"/>
    <CheckBox
        style="@style/stylemeasure"
        android:text="@string/Q3_option2"
        android:id="@+id/wrong_answer3ii"/>
    <CheckBox
        style="@style/stylemeasure"
        android:text="@string/Q3_option3"
        android:id="@+id/answer_3i"/>
    <CheckBox
        style="@style/stylemeasure"
        android:text="@string/Q3_option4"
        android:id="@+id/answer_3ii"/>

    <TextView
        style="@style/stylemeasure"
        android:text="@string/Q4"
        android:id="@+id/Question_4"/>

    <EditText
        style="@style/stylemeasure"
        android:hint="@string/Q4_enter_your_answer"
        android:id="@+id/answer_4"
        />

    <TextView
        style="@style/stylemeasure"
        android:text="@string/Q5"
        android:id="@+id/Question_5"/>

    <RadioGroup
       style="@style/stylemeasure">

        <RadioButton
           style="@style/stylemeasure"
            android:text="@string/Q5_option1"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q5_option2"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q5_option3"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q5_option4"
            android:id="@+id/answer_5"/>
    </RadioGroup>

    <TextView
        style="@style/stylemeasure"
        android:text="@string/Q6"
        android:id="@+id/Question_6"/>
    <EditText
       style="@style/stylemeasure"
        android:hint="@string/Q6_enter_your_answer_"
        android:id="@+id/answer_6"/>

    <TextView
        style="@style/stylemeasure"
        android:text="@string/Q7"
        android:id="@+id/Question_7"/>
    <EditText
        style="@style/stylemeasure"
        android:hint="@string/Q7_enter_your_answer"
        android:id="@+id/answer_7"/>

    <TextView
        style="@style/stylemeasure"
        android:text="@string/Q8"
        android:id="@+id/Question_8"/>
    <CheckBox
        style="@style/stylemeasure"
        android:text="@string/Q8_option1"
        android:id="@+id/wrong_answer8i"/>
    <CheckBox
        style="@style/stylemeasure"
        android:text="@string/Q8_option2"
        android:id="@+id/wrong_answer8ii"/>
    <CheckBox
        style="@style/stylemeasure"
        android:text="@string/Q8_option3"
        android:id="@+id/answer_8i"/>
    <CheckBox
        style="@style/stylemeasure"
        android:text="@string/Q8_option4"
        android:id="@+id/asnwer_8ii"/>

    <TextView
        style="@style/stylemeasure"
        android:text="@string/Q9"
        android:id="@+id/Question_9"/>

    <RadioGroup
       style="@style/stylemeasure">

        <RadioButton
           style="@style/stylemeasure"
            android:text="@string/Q9_option1"/>
        <RadioButton
           style="@style/stylemeasure"
            android:text="@string/Q9_option2"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q9_option3"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q9_option4"
            android:id="@+id/answer_9"/>
    </RadioGroup>

    <TextView
        style="@style/stylemeasure"
        android:text="@string/Q10"
        android:id="@+id/Question_10"/>

    <RadioGroup
      style="@style/stylemeasure">
        <RadioButton
           style="@style/stylemeasure"
            android:text="@string/Q10_option1"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q10_option2"/>
        <RadioButton
           style="@style/stylemeasure"
            android:text="@string/Q10_option3"
            android:id="@+id/answer_10"/>
        <RadioButton
            style="@style/stylemeasure"
            android:text="@string/Q10_option4"/>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
       style="@style/stylemeasure"
        android:text="@string/quiz_score_button"
        android:onClick="Score"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>
</ScrollView>